Adding change owner rest api and regenerate consumer secret rest api
